Bug 263672 - [WebGPU] WGPUTextureFormat_BC2RGBAUnorm and WGPUTextureFormat_BC2RGBAUnormSrgb have the wrong block size in Texture::blockSize
Summary: [WebGPU] WGPUTextureFormat_BC2RGBAUnorm and WGPUTextureFormat_BC2RGBAUnormSrg...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebGPU (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-10-25 10:34 PDT by Mike Wyrzykowski
Modified: 2023-10-25 12:31 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Wyrzykowski 2023-10-25 10:34:00 PDT
[WebGPU] WGPUTextureFormat_BC2RGBAUnorm and WGPUTextureFormat_BC2RGBAUnormSrgb have the wrong block size in Texture::blockSize
Comment 1 Radar WebKit Bug Importer 2023-10-25 10:34:15 PDT
<rdar://problem/117483503>
Comment 2 Mike Wyrzykowski 2023-10-25 10:41:00 PDT
Pull request: https://github.com/WebKit/WebKit/pull/19551
Comment 3 EWS 2023-10-25 12:31:18 PDT
Committed 269775@main (9444546bdb0b): <https://commits.webkit.org/269775@main>

Reviewed commits have been landed. Closing PR #19551 and removing active labels.