[WebGPU] WGPUTextureFormat_BC2RGBAUnorm and WGPUTextureFormat_BC2RGBAUnormSrgb have the wrong block size in Texture::blockSize https://bugs.webkit.org/show_bug.cgi?id=263672 <radar://117483503>

Reviewed by Tadeu Zagallo.

WGPUTextureFormat_BC2RGBAUnorm* block size was wrong along with
WGPUTextureFormat_BC2RGBAUnorm* as well.

* Source/WebGPU/WebGPU/Texture.mm:
(WebGPU::Texture::texelBlockSize):

Canonical link: https://commits.webkit.org/269775@main